fix: se coptimizo la imagen del banner a webp - Se agrego el icono del la pestania - Se eliminaron imagenes que ya no se van a usar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moto Sport La Roca</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/logo.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/logo.ico" />
+    <!-- Optional SVG favicon for modern browsers -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
